--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,12 @@ install_awscli: &install_awscli
   command: |
     sudo pip install awscli --upgrade
 install_deploysuite: &install_deploysuite
-          name: Installation of install_deploysuite.
-          command: |
-            git clone --branch master https://github.com/topcoder-platform/tc-deploy-scripts ../buildscript
-            cp ./../buildscript/master_deploy.sh .
-            cp ./../buildscript/buildenv.sh .
-            cp ./../buildscript/awsconfiguration.sh .
+  name: Installation of install_deploysuite.
+  command: |
+    git clone --branch v1.4 https://github.com/topcoder-platform/tc-deploy-scripts ../buildscript
+    cp ./../buildscript/master_deploy.sh .
+    cp ./../buildscript/buildenv.sh .
+    cp ./../buildscript/awsconfiguration.sh .
             
 # Instructions of deployment
 deploy_steps: &deploy_steps
@@ -23,22 +23,16 @@ deploy_steps: &deploy_steps
   - run: *install_awscli
   - run: *install_deploysuite
   - setup_remote_docker
-  - run: docker build -t tc-project-service:latest .
+  - run: docker build -t ${APPNAME}:latest .
   - deploy:
       name: "Running Masterscript -  deploy tc-project-service " 
       command: |
         ./awsconfiguration.sh $DEPLOY_ENV  
         source awsenvconf
-        ./buildenv.sh -e $DEPLOY_ENV -b ${VAR_ENV}-tc-project-service-deployvar
-        source buildenvvar
-        ./master_deploy.sh -d ECS -e $DEPLOY_ENV -t latest -s ${VAR_ENV}-global-appvar,${VAR_ENV}-tc-project-service-appvar -i tc-project-service -p FARGATE 
-
-        echo "======= Running Masterscript - deploy tc-project-service-consumers ==========="
-        if [ -e ${VAR_ENV}-tc-project-service-appvar.json ]; then  sudo rm -vf ${VAR_ENV}-tc-project-service-appvar.json; fi
-        ./buildenv.sh -e $DEPLOY_ENV -b ${VAR_ENV}-tc-project-service-consumers-deployvar
-        source buildenvvar
-        ./master_deploy.sh -d ECS -e $DEPLOY_ENV -t latest -s ${VAR_ENV}-global-appvar,${VAR_ENV}-tc-project-service-appvar -i tc-project-service -p FARGATE
-        
+#        ./buildenv.sh -e $DEPLOY_ENV -b ${LOGICAL_ENV}-${APPNAME}-deployvar
+#        source buildenvvar
+#        ./master_deploy.sh -d ECS -e $DEPLOY_ENV -t latest -s ${LOGICAL_ENV}-global-appvar,${LOGICAL_ENV}-${APPNAME}-appvar -i ${APPNAME}
+       
 jobs:
   test:
     docker:
@@ -53,7 +47,8 @@ jobs:
       AUTH_SECRET: secret
       AUTH_DOMAIN: topcoder-dev.com
       LOG_LEVEL: debug
-      APP_VERSION: v4
+      APP_VERSION: v5
+      APPNAME: "projects-api" 
     steps:
       - checkout
       - restore_cache:
@@ -75,14 +70,16 @@ jobs:
     <<: *python_env
     environment:
       DEPLOY_ENV: "PROD"
-      VAR_ENV: "prod"
+      LOGICAL_ENV: "prod"
+      APPNAME: "projects-api" 
     steps: *deploy_steps
 
   deployDev:
     <<: *python_env
     environment:
       DEPLOY_ENV: "DEV"
-      VAR_ENV: "dev"
+      LOGICAL_ENV: "dev"
+      APPNAME: "projects-api" 
     steps: *deploy_steps 
     
 workflows:
@@ -96,7 +93,7 @@ workflows:
             - test
           filters:
             branches:
-              only: ['dev', 'dev-sts']
+              only: ['develop']
       - deployProd:
           context : org-global
           requires:
