--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,14 +43,14 @@ jobs:
         - POSTGRES_DB: circle_test
       - image: elasticsearch:2.3
     environment:
-      DB_MASTER_URL: postgres://circle_test:@127.0.0.1:5432/circle_test
-      AUTH_SECRET: secret
-      AUTH_DOMAIN: topcoder-dev.com
-      LOG_LEVEL: debug
-      APP_VERSION: v5
-      APPNAME: "projects-api" 
+      DEPLOY_ENV: "DEV"
+      LOGICAL_ENV: "dev"
+      APPNAME: "projects-api"       
     steps:
       - checkout
+      - run: *install_awscli
+      - run: *install_deploysuite
+      - setup_remote_docker      
       - restore_cache:
           key: test-node-modules-{{ checksum "package.json" }}
       - run: npm install
@@ -59,7 +59,15 @@ jobs:
           paths:
             - node_modules
       - run: npm run lint
-      - run: npm run test
+      - run:
+          name: "Running Masterscript -  deploy tc-project-service " 
+          command: |
+            ./awsconfiguration.sh $DEPLOY_ENV  
+            source awsenvconf
+            ./buildenv.sh -e $DEPLOY_ENV -b ${LOGICAL_ENV}-${APPNAME}-testvar
+            source buildenvvar         
+            npm run test
+            rm -f buildenvvar
       - run: npm run build
       - persist_to_workspace:
           root: .
