setting test enviroment var

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,8 @@ jobs:
           name: "Install dependeency"
           command: |
               sudo apt update
-              sudo apt install python-pip curl
+              sudo apt install python-pip 
+              sudo apt install curl
       - run: *install_awscli
       - run: *install_deploysuite
       - setup_remote_docker      
