--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ jobs:
           command: |
               sudo apt update
               sudo apt install curl
+              sudo apt update
               sudo apt install python-pip               
       - run: *install_awscli
       - run: *install_deploysuite
