--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,6 @@ jobs:
           command: |
               sudo apt update
               sudo apt install curl
-              sudo apt update
               sudo apt install python-pip               
       - run: *install_awscli
       - run: *install_deploysuite
@@ -101,7 +100,8 @@ workflows:
   version: 2
   build:
     jobs:
-      - test
+      - test:
+          context : org-global
       - deployDev:
           context : org-global
           requires:
