Disabling builds from this repo
as we have enabled the builds now from tc-project-service, we have to disable the builds from this repo to prevent accidental deploys. We would remove this repo after some time, all new work would be done in tc-project-service again.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,11 +109,11 @@ workflows:
             - test
           filters:
             branches:
-              only: ['develop']
+              only: ['non-existing-develop']
       - deployProd:
           context : org-global
           requires:
             - test
           filters:
             branches:
-              only: ['master']
+              only: ['non-existing-master']
